--- a/docs/_assets/css/theme-custom.css
+++ b/docs/_assets/css/theme-custom.css
@@ -4,10 +4,19 @@
     --sidebar-name-color                              : #0A75BD;
     --sidebar-nav-link-color--active                  : #4D4D4D;
     --sidebar-nav-link-font-weight--active            : bold;
+    
+    /* > */
     --sidebar-nav-pagelink-background-image           : url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='7' height='11.2' viewBox='0 0 7 11.2'%3E%3Cpath d='M1.5 1.5l4 4.1 -4 4.1' stroke-width='1.5' stroke='black' fill='none' stroke-linecap='square' stroke-linejoin='miter' vector-effect='non-scaling-stroke'/%3E%3C/svg%3E");
+    
+    /* v */
     --sidebar-nav-pagelink-background-image--active   : url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='11.2' height='7' viewBox='0 0 11.2 7'%3E%3Cpath d='M1.5 1.5l4.1 4 4.1-4' stroke-width='1.5' stroke='black' fill='none' stroke-linecap='square' stroke-linejoin='miter' vector-effect='non-scaling-stroke'/%3E%3C/svg%3E");
+    
+    /* > */
     --sidebar-nav-pagelink-background-image--collapse : url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='7' height='11.2' viewBox='0 0 7 11.2'%3E%3Cpath d='M1.5 1.5l4 4.1 -4 4.1' stroke-width='1.5' stroke='black' fill='none' stroke-linecap='square' stroke-linejoin='miter' vector-effect='non-scaling-stroke'/%3E%3C/svg%3E");
+    
+    /* v */
     --sidebar-nav-pagelink-background-image--loaded   : url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='11.2' height='7' viewBox='0 0 11.2 7'%3E%3Cpath d='M1.5 1.5l4.1 4 4.1-4' stroke-width='1.5' stroke='black' fill='none' stroke-linecap='square' stroke-linejoin='miter' vector-effect='non-scaling-stroke'/%3E%3C/svg%3E");
+
     --content-max-width                               : 100%;
 }
 
@@ -28,4 +37,49 @@
 
 .responsive-wrap iframe{
   max-width: 100%;
+}
+
+.sidebar {
+  font-size: 80%;
+  text-overflow: clip;
+  word-wrap: break-word;
+  white-space: normal;
+}
+
+.sidebar-nav ul:not(.app-sub-sidebar) > li {
+  position: relative;
+  margin: 0;
+  cursor: pointer;
+  margin-left: 4px;
+}
+
+.sidebar-nav ul:not(.app-sub-sidebar) > li.folder::before {
+  content: '📁 ';
+}
+
+.sidebar-nav ul:not(.app-sub-sidebar) > li.folder.open::before {
+  content: '📂 ';
+}
+
+.sidebar-nav ul:not(.app-sub-sidebar) > li.file > a::before {
+  content: '🗋 ';
+}
+
+.sidebar-nav ul:not(.app-sub-sidebar) > li.file.open > a::before {
+  content: '🗎 ';
+}
+
+.sidebar-nav a {
+  white-space: normal;
+  text-overflow: unset;
+}
+
+
+.sidebar-nav>ul {
+  margin-left: 0px
+}
+
+td::before {
+  /* fix for table bug */
+  display: none 
 }
