--- a/docs/_assets/css/theme-custom.css
+++ b/docs/_assets/css/theme-custom.css
@@ -80,3 +80,20 @@ td::before {
   /* fix for table bug */
   display: none 
 }
+
+/* image alignment hacks */
+img[alt$=">"] {
+  float: right;
+}
+
+img[alt$="<"] {
+  float: left;
+}
+
+img[alt$="><"] {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+  float: none!important;
+}
