--- a/docs/_assets/css/theme-custom.css
+++ b/docs/_assets/css/theme-custom.css
@@ -50,19 +50,28 @@
   margin-left: 4px;
 }
 
-.sidebar-nav ul:not(.app-sub-sidebar) > li.folder::before {
+.sidebar-nav ul:not(.app-sub-sidebar) > li::before,
+.sidebar-nav ul:not(.app-sub-sidebar) > li > *::before
+{
+  display: inline-block;
+  width: 18px;
+}
+
+.sidebar-nav ul:not(.app-sub-sidebar) > li.folder > strong::before, /* LINKS folder */
+.sidebar-nav ul:not(.app-sub-sidebar) > li.folder:not(:has(strong))::before { /* all folders except LINKS */
   content: '📁 ';
 }
 
-.sidebar-nav ul:not(.app-sub-sidebar) > li.folder.open::before {
+.sidebar-nav ul:not(.app-sub-sidebar) > li.folder.open > strong::before, /* opened LINKS folder */
+.sidebar-nav ul:not(.app-sub-sidebar) > li.folder.open:not(:has(strong))::before { /* all opened folders except LINKS */
   content: '📂 ';
 }
 
-.sidebar-nav ul:not(.app-sub-sidebar) > li.file > a::before {
+.sidebar-nav ul:not(.app-sub-sidebar) > li.file > a::before { /* files */
   content: '📓 ';
 }
 
-.sidebar-nav ul:not(.app-sub-sidebar) > li.file.open > a::before {
+.sidebar-nav ul:not(.app-sub-sidebar) > li.file.open > a::before { /* opened files */
   content: '📖 ';
 }
 
